@@ -1,6 +1,6 @@
 before_install:
   - echo 'add_package_checks()' > /home/travis/build/bjmt/universalmotif/tic.R
-  - R -q -e 'install.packages(c("remotes", "curl", "covr")); remotes::install_github("ropenscilabs/tic"); tic::prepare_all_stages(); tic::before_install()'
+  - R -q -e 'install.packages(c("remotes", "curl", "covr")); remotes::install_github("ropenscilabs/tic"); remotes::install_github("GuangchuangYu/ggtree"); tic::prepare_all_stages(); tic::before_install()'
 install: R -q -e 'tic::install()'
 after_install: R -q -e 'tic::after_install()'
 before_script: R -q -e 'tic::before_script()'
